# OmniBus-Cazino

./: .gitignore  ARCHITECTURE.md  CASINO_POKER_PROPOSAL.md  CLAUDE.md  CMakeLists.txt  README.md  config.json  generate_ssl_cert.bat  patch_linux.py  rebuild.bat  vps_setup.py
.claude/agent-memory/omnibus-casino-expert/: MEMORY.md
.claude/agents/: omnibus-casino-expert.md  omnibus-poker-room-expert.md
mockup/: casino_mockup.html  deeppoker.html  poker_OPTION2_png_cards.html  poker_OPTION3_webgl_3d.html  poker_room_3d_mockup.html  poker_table_mockup.html
resources/styles/: dark_theme.qss
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/engine/: AccountSystem.cpp  AccountSystem.h  BettingEngine.cpp  BettingEngine.h  PokerEvaluator.cpp  PokerEvaluator.h  ProvablyFair.cpp  ProvablyFair.h
src/games/: AuctionGame.cpp  AuctionGame.h  BinaryOptionsGame.cpp  BinaryOptionsGame.h  BlackjackGame.cpp  BlackjackGame.h  CoinFlipGame.cpp  CoinFlipGame.h  CrashGame.cpp  CrashGame.h  DiceGame.cpp  DiceGame.h  PokerGame.cpp  PokerGame.h  PokerRoom.cpp  PokerRoom.h  RaceBettingGame.cpp  RaceBettingGame.h  SlotsGame.cpp  SlotsGame.h  SportsBettingGame.cpp  SportsBettingGame.h
src/models/: Bet.h  GameResult.h  Player.h
src/network/: PokerClient.cpp  PokerClient.h
src/p2p/: GameCode.cpp  GameCode.h  MentalPoker.cpp  MentalPoker.h  P2PDiscovery.cpp  P2PDiscovery.h  ReputationSystem.cpp  ReputationSystem.h
src/server/: PokerProtocol.cpp  PokerProtocol.h  PokerServer.cpp  PokerServer.h  PokerTable.cpp  PokerTable.h  Tournament.cpp  Tournament.h
src/ui/: BetPanel.cpp  BetPanel.h  GameWidget.h  LobbyWidget.cpp  LobbyWidget.h  LoginWidget.cpp  LoginWidget.h  P2PLobbyWidget.cpp  P2PLobbyWidget.h  TournamentLobbyWidget.cpp  TournamentLobbyWidget.h
src/utils/: CardDeck.cpp  CardDeck.h  SoundEngine.cpp  SoundEngine.h
